Fix alignment (#75)
* Remove unnecessary width container

* Remove nested header landmark

* Fix hero alignment on small screens

* Fix filters alignment

--- a/assets/scss/overrides/_local.scss
+++ b/assets/scss/overrides/_local.scss
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
     box-shadow: none;
-    padding: 20px 30px;
+    padding: 20px 0;
 
     // Override MOJ filter default that zeros margin-bottom on the last div.
     div:last-of-type {
